prevent x-button from becoming squished

--- a/packages/calcite-components/src/assets/styles/includes.scss
+++ b/packages/calcite-components/src/assets/styles/includes.scss
@@ -131,6 +131,8 @@
     color: #{$color};
     block-size: #{$size};
     inline-size: #{$size};
+    min-block-size: #{$size};
+    min-inline-size: #{$size};
     padding: #{$padding};
 
     &:hover,
